--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@meteorrn/core": "^2.0.13",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/netinfo": "^5.9.6",
     "react": "16.13.1",
     "react-native": "0.63.2"
