--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@meteorrn/core": "^2.1.0-beta1",
+    "@meteorrn/core": "2.1.0-rc1",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/netinfo": "^5.9.6",
     "react": "16.13.1",
